--- a/inkstand-core/pom.xml
+++ b/inkstand-core/pom.xml
@@ -15,19 +15,17 @@
   ~  See the License for the specific language governing permissions and
   ~  limitations under the License.
   -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>li.moskito</groupId>
-    <artifactId>inkstand-core</artifactId>
+    <parent>
+		<groupId>li.moskito</groupId>
+		<artifactId>inkstand</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<artifactId>inkstand-core</artifactId>
+	<name>${project.groupId}:${project.artifactId}</name>
     <packaging>jar</packaging>
     <url>https://github.com/moskitoli/inkstand/wiki</url>
-    <version>0.0.1-SNAPSHOT</version>
-    <parent>
-        <groupId>li.moskito</groupId>
-        <artifactId>inkstand</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-    </parent>
     <dependencies>
         <dependency>
             <groupId>org.jboss.weld.se</groupId>
@@ -38,14 +36,6 @@
             <artifactId>resteasy-jaxrs</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.undertow</groupId>
-            <artifactId>undertow-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.undertow</groupId>
-            <artifactId>undertow-servlet</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-cdi</artifactId>
         </dependency>
@@ -54,18 +44,16 @@
             <artifactId>async-http-servlet-3.0</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-client</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <scope>test</scope>
+            <groupId>io.undertow</groupId>
+            <artifactId>undertow-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
+            <groupId>io.undertow</groupId>
+            <artifactId>undertow-servlet</artifactId>
         </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.junit</groupId>
@@ -77,9 +65,6 @@
             <artifactId>arquillian-weld-se-embedded-1.1</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-client</artifactId>
-        </dependency>
+
     </dependencies>
 </project>
