--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,8 @@
-<!--
-  ~ Copyright 2014 Gerald Muecke
-  ~
-  ~  Licensed under the Apache License, Version 2.0 (the "License");
-  ~  you may not use this file except in compliance with the License.
-  ~  You may obtain a copy of the License at
-  ~
-  ~  http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~  Unless required by applicable law or agreed to in writing, software
-  ~  distributed under the License is distributed on an "AS IS" BASIS,
-  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
-  ~  implied.
-  ~
-  ~  See the License for the specific language governing permissions and
-  ~  limitations under the License.
-  -->
+<!-- ~ Copyright 2014 Gerald Muecke ~ ~ Licensed under the Apache License, Version 2.0 (the "License"); ~ you may not use 
+	this file except in compliance with the License. ~ You may obtain a copy of the License at ~ ~ http://www.apache.org/licenses/LICENSE-2.0 
+	~ ~ Unless required by applicable law or agreed to in writing, software ~ distributed under the License is distributed on 
+	an "AS IS" BASIS, ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or ~ implied. ~ ~ See the License for the 
+	specific language governing permissions and ~ limitations under the License. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -53,13 +41,13 @@
 		<sonar.jacoco.itReportPath>${coverage.integration.test.path}</sonar.jacoco.itReportPath>
 		<sonar.language>java</sonar.language>
 		<jacoco.version>0.7.2.201409121644</jacoco.version>
-	
+
 		<!-- Test lib versions -->
 		<test.junit.version>4.11</test.junit.version>
 		<test.mockito.version>1.9.5</test.mockito.version>
 		<test.htmlunit.version>2.8</test.htmlunit.version>
 		<test.jsonassert.version>1.2.3</test.jsonassert.version>
-		<test.arquillian.version>1.1.3.Final</test.arquillian.version>
+		<test.arquillian.version>1.1.5.Final</test.arquillian.version>
 		<test.arquillian.weld.version>1.0.0.CR8</test.arquillian.weld.version>
 		<!-- javax library versions -->
 		<javax.jcr.version>2.0</javax.jcr.version>
@@ -72,7 +60,7 @@
 		<apache.jackrabbit.version>2.6.5</apache.jackrabbit.version>
 		<!-- JBoss Library Version -->
 		<jboss.resteasy.version>3.0.10.Final</jboss.resteasy.version>
-		<jboss.weld.se.version>3.0.0.Alpha1</jboss.weld.se.version>
+		<jboss.weld.se.version>2.2.6.Final</jboss.weld.se.version>
 		<jboss.undertow.version>1.2.0.Beta3</jboss.undertow.version>
 		<!-- Library Versions -->
 		<halite.version>0.0.15</halite.version>
@@ -80,8 +68,13 @@
 	</properties>
 	<modules>
 		<module>inkstand-core</module>
+		<module>inkstand-jcr</module>
+		<module>inkstand-jcr-jackrabbit</module>
+		<module>inkstand-http-undertow</module>
+		<module>inkstand-deployments</module>
+		<module>inkstand-test-util</module>
 	</modules>
-	
+
 	<dependencyManagement>
 		<dependencies>
 			<!-- Javax -->
@@ -105,7 +98,7 @@
 				<artifactId>validation-api</artifactId>
 				<version>${javax.validation-api.version}</version>
 			</dependency>
-			
+
 			<!-- Apache Commons -->
 			<dependency>
 				<groupId>commons-io</groupId>
@@ -123,7 +116,7 @@
 				<artifactId>deltaspike-core-impl</artifactId>
 				<version>${apache.deltaspike.version}</version>
 			</dependency>
-			<!-- JBoss Resteasy-->
+			<!-- JBoss Resteasy -->
 			<dependency>
 				<groupId>org.jboss.resteasy</groupId>
 				<artifactId>jaxrs-api</artifactId>
@@ -149,7 +142,7 @@
 				<artifactId>resteasy-client</artifactId>
 				<version>${jboss.resteasy.version}</version>
 			</dependency>
-			
+
 			<!-- Weld CDI Container -->
 			<dependency>
 				<groupId>org.jboss.weld.se</groupId>
@@ -164,7 +157,7 @@
 			<dependency>
 				<groupId>io.undertow</groupId>
 				<artifactId>undertow-servlet</artifactId>
-				<version>1.2.0.Beta3</version>
+				<version>${jboss.undertow.version}</version>
 			</dependency>
 			<!-- Test Dependencies -->
 			<dependency>
@@ -178,19 +171,19 @@
 				<version>${test.mockito.version}</version>
 			</dependency>
 			<!-- Arquillian -->
-            <dependency>
-                <groupId>org.jboss.arquillian</groupId>
-                <artifactId>arquillian-bom</artifactId>
-                <version>${test.arquillian.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.arquillian.container</groupId>
-                <artifactId>arquillian-weld-se-embedded-1.1</artifactId>
-                <version>${test.arquillian.weld.version}</version>
-                <scope>test</scope>
-            </dependency>
+			<dependency>
+				<groupId>org.jboss.arquillian</groupId>
+				<artifactId>arquillian-bom</artifactId>
+				<version>${test.arquillian.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.arquillian.container</groupId>
+				<artifactId>arquillian-weld-se-embedded-1.1</artifactId>
+				<version>${test.arquillian.weld.version}</version>
+				<scope>test</scope>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -254,10 +247,52 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>org.jboss.weld.environment.se.StartMain</mainClass>
+							<mainClass>li.moskito.inkstand.Inkstand</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
+				<configuration>
+					<skip>${skipTests}</skip>
+					<includes>
+						<include>li.moskito.inkstand.*</include>
+					</includes>
+				</configuration>
+				<executions>
+					<execution>
+						<id>prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+						<configuration>
+							<destFile>${coverage.unit.test.path}</destFile>
+							<append>true</append>
+							<propertyName>surefire.argLine</propertyName>
+						</configuration>
+					</execution>
+					<execution>
+						<id>prepare-it-agent</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+						<configuration>
+							<destFile>${coverage.integration.test.path}</destFile>
+							<propertyName>failsafe.argLine</propertyName>
+							<append>true</append>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>2.4</version>
 			</plugin>
 		</plugins>
 	</build>
