--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
 		<!-- Apache Library Version -->
 		<apache.commons.io.version>2.4</apache.commons.io.version>
 		<apache.deltaspike.version>1.1.0</apache.deltaspike.version>
-		<apache.jackrabbit.version>2.6.5</apache.jackrabbit.version>
+		<apache.jackrabbit.version>2.8.0</apache.jackrabbit.version>
 		<!-- JBoss Library Version -->
 		<jboss.resteasy.version>3.0.10.Final</jboss.resteasy.version>
 		<jboss.weld.se.version>2.2.6.Final</jboss.weld.se.version>
@@ -73,6 +73,7 @@
 		<module>inkstand-http-undertow</module>
 		<module>inkstand-deployments</module>
 		<module>inkstand-test-util</module>
+		<module>inkstand-ms</module>
 	</modules>
 
 	<dependencyManagement>
