--- a/inkstand-jcr-jackrabbit/pom.xml
+++ b/inkstand-jcr-jackrabbit/pom.xml
@@ -22,12 +22,20 @@
 				<groupId>org.apache.jackrabbit</groupId>
 				<artifactId>jackrabbit-core</artifactId>
 				<version>${apache.jackrabbit.version}</version>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.jackrabbit</groupId>
 				<artifactId>jackrabbit-jcr-commons</artifactId>
 				<version>${apache.jackrabbit.version}</version>
+				<scope>provided</scope>
 			</dependency>
+			<dependency>
+                <groupId>org.apache.jackrabbit</groupId>
+                <artifactId>jackrabbit-jca</artifactId>
+                <version>${apache.jackrabbit.version}</version>
+                <scope>provided</scope>
+            </dependency>
 		</dependencies>
 	</dependencyManagement>
 	
@@ -50,6 +58,10 @@
 			<groupId>org.apache.jackrabbit</groupId>
 			<artifactId>jackrabbit-jcr-commons</artifactId>
 		</dependency>
+		<dependency>
+            <groupId>org.apache.jackrabbit</groupId>
+            <artifactId>jackrabbit-jca</artifactId>
+        </dependency>
 		<!-- Deltaspike -->
 		<dependency>
 			<groupId>org.apache.deltaspike.core</groupId>
