IC-13 added qa profile and fixed module names

--- a/inkstand-deployments/inkstand-deployment-resteasy/pom.xml
+++ b/inkstand-deployments/inkstand-deployment-resteasy/pom.xml
@@ -6,7 +6,9 @@
 		<artifactId>inkstand-deployments</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
+	
 	<artifactId>inkstand-deployment-resteasy</artifactId>
+	<name>${project.groupId}:${project.artifactId}</name>
 	<description>Simple Resteasy Deployment for Undertow.</description>
 
 	<dependencies>
