IC-13 added distribution management

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,16 @@
 		<system>GitHub</system>
 		<url>https://github.com/moskitoli/inkstand/issues</url>
 	</issueManagement>
+	<distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 	<scm>
 		<developerConnection>scm:git:git@github.com:moskitoli/inkstand.git</developerConnection>
 		<url>https://github.com/moskitoli/inkstand</url>
