--- a/pom.xml
+++ b/pom.xml
@@ -399,7 +399,21 @@
 					</archive>
 				</configuration>
 			</plugin>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <forkCount>1</forkCount>
+                    <reuseForks>false</reuseForks>
+                    <runOrder>random</runOrder>
+                    <enableAssertions>true</enableAssertions>
+                    <argLine>-Xms16M -Xmx512M ${surefireArgLine}</argLine>
+                    <systemPropertyVariables>
+                        <tests.json.strict.validation.disabled>${tests.json.strict.validation.disabled}</tests.json.strict.validation.disabled>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
