--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,36 @@
-<!-- ~ Copyright 2014 Gerald Muecke ~ ~ Licensed under the Apache License, Version 2.0 (the "License"); ~ you may not use 
-	this file except in compliance with the License. ~ You may obtain a copy of the License at ~ ~ http://www.apache.org/licenses/LICENSE-2.0 
-	~ ~ Unless required by applicable law or agreed to in writing, software ~ distributed under the License is distributed on 
-	an "AS IS" BASIS, ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or ~ implied. ~ ~ See the License for the 
-	specific language governing permissions and ~ limitations under the License. -->
+<!-- ~ Copyright 2014 Gerald Muecke ~ ~ Licensed under the Apache License, 
+	Version 2.0 (the "License"); ~ you may not use this file except in compliance 
+	with the License. ~ You may obtain a copy of the License at ~ ~ http://www.apache.org/licenses/LICENSE-2.0 
+	~ ~ Unless required by applicable law or agreed to in writing, software ~ 
+	distributed under the License is distributed on an "AS IS" BASIS, ~ WITHOUT 
+	WARRANTIES OR CONDITIONS OF ANY KIND, either express or ~ implied. ~ ~ See 
+	the License for the specific language governing permissions and ~ limitations 
+	under the License. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>li.moskito</groupId>
 	<artifactId>inkstand</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+
 	<name>${project.groupId}:${project.artifactId}</name>
 	<packaging>pom</packaging>
+	<description>A lightweight infrastructure for standalone rest based microservices. Based on the idea
+	and basic implementation by John Ament, https://github.com/johnament/hammock. Inkstand consists of
+	a CDI container (Weld), a WebServer/Servlet Container (Undertow) and Jax-RS implementation and webapp (RestEasy).
+	It provides auto resource and provider discovery and base support for JCR-based persistence.
+	</description>
 	<url>https://github.com/moskitoli/inkstand/wiki</url>
-	<version>0.0.1-SNAPSHOT</version>
+
+	<developers>
+		<developer>
+			<name>Gerald Muecke</name>
+			<email>gerald@moskito.li</email>
+			<organization>Moskito.li</organization>
+			<organizationUrl>https://github.com/moskitoli</organizationUrl>
+		</developer>
+	</developers>
+
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
@@ -19,25 +38,39 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
+	
 	<issueManagement>
 		<system>GitHub</system>
 		<url>https://github.com/moskitoli/inkstand/issues</url>
 	</issueManagement>
+	
 	<distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-        <repository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-    </distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
+	
 	<scm>
 		<developerConnection>scm:git:git@github.com:moskitoli/inkstand.git</developerConnection>
 		<url>https://github.com/moskitoli/inkstand</url>
 		<connection>scm:git:https://github.com/moskitoli/inkstand.git</connection>
 	</scm>
+	
+    <modules>
+        <module>inkstand-core</module>
+        <module>inkstand-jcr</module>
+        <module>inkstand-jcr-jackrabbit</module>
+        <module>inkstand-http-undertow</module>
+        <module>inkstand-deployments</module>
+        <module>inkstand-test-util</module>
+        <module>inkstand-ms</module>
+    </modules>
+	
 	<properties>
 		<!-- Common Libraries Versions -->
 		<slf4j.version>1.7.6</slf4j.version>
@@ -74,153 +107,143 @@
 		<jboss.undertow.version>1.2.0.Beta3</jboss.undertow.version>
 		<!-- Library Versions -->
 		<halite.version>0.0.15</halite.version>
-
 	</properties>
-	<modules>
-		<module>inkstand-core</module>
-		<module>inkstand-jcr</module>
-		<module>inkstand-jcr-jackrabbit</module>
-		<module>inkstand-http-undertow</module>
-		<module>inkstand-deployments</module>
-		<module>inkstand-test-util</module>
-		<module>inkstand-ms</module>
-	</modules>
-	
+
 	<profiles>
-        <profile>
-            <id>development</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <properties>
-                <surefireArgLine />
-                <tests.json.strict.validation.disabled>false</tests.json.strict.validation.disabled>
-            </properties>
-        </profile>
-        <profile>
-            <id>qa</id>
-            <properties>
-                <tests.json.strict.validation.disabled>true</tests.json.strict.validation.disabled>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.jacoco</groupId>
-                        <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>${jacoco.version}</version>
-                        <configuration>
-                            <skip>${skipTests}</skip>
-                            <includes>
-                                <include>li.moskito.inkstand.*</include>
-                            </includes>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>prepare-agent</id>
-                                <goals>
-                                    <goal>prepare-agent</goal>
-                                </goals>
-                                <configuration>
-                                    <destFile>${coverage.unit.test.path}</destFile>
-                                    <append>true</append>
-                                    <propertyName>surefireArgLine</propertyName>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>sonar-maven-plugin</artifactId>
-                        <version>2.4</version>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>release</id>
-            <properties>
-                <surefireArgLine />
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-source-plugin</artifactId>
-                        <version>2.2.1</version>
-                        <executions>
-                            <execution>
-                                <id>attach-sources</id>
-                                <goals>
-                                    <goal>jar-no-fork</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.10.1</version>
-                        <executions>
-                            <execution>
-                                <id>attach-javadocs</id>
-                                <goals>
-                                    <goal>jar</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <additionalJOptions>
-                                <additionalJOption>-J-Xmx16m </additionalJOption>
-                            </additionalJOptions>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.5</version>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>external.atlassian.jgitflow</groupId>
-                        <artifactId>jgitflow-maven-plugin</artifactId>
-                        <version>1.0-m4.3</version>
-                        <configuration>
-                            <enableSshAgent>false</enableSshAgent>
-                            <autoVersionSubmodules>true</autoVersionSubmodules>
-                            <pushFeatures>true</pushFeatures>
-                            <pushReleases>true</pushReleases>
-                            <pushHotfixes>true</pushHotfixes>
-                            <noDeploy>false</noDeploy>
-                            <alwaysUpdateOrigin>true</alwaysUpdateOrigin>
-                            <flowInitContext>
-                                <developBranchName>development</developBranchName>
-                                <versionTagPrefix>rev-</versionTagPrefix>
-                            </flowInitContext>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.sonatype.plugins</groupId>
-                        <artifactId>nexus-staging-maven-plugin</artifactId>
-                        <version>1.6.5</version>
-                        <extensions>true</extensions>
-                        <configuration>
-                            <serverId>ossrh</serverId>
-                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+		<profile>
+			<id>development</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<surefireArgLine />
+				<tests.json.strict.validation.disabled>false</tests.json.strict.validation.disabled>
+			</properties>
+		</profile>
+		<profile>
+			<id>qa</id>
+			<properties>
+				<tests.json.strict.validation.disabled>true</tests.json.strict.validation.disabled>
+			</properties>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<version>${jacoco.version}</version>
+						<configuration>
+							<skip>${skipTests}</skip>
+							<includes>
+								<include>li.moskito.inkstand.*</include>
+							</includes>
+						</configuration>
+						<executions>
+							<execution>
+								<id>prepare-agent</id>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+								<configuration>
+									<destFile>${coverage.unit.test.path}</destFile>
+									<append>true</append>
+									<propertyName>surefireArgLine</propertyName>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>sonar-maven-plugin</artifactId>
+						<version>2.4</version>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>release</id>
+			<properties>
+				<surefireArgLine />
+			</properties>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>2.2.1</version>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<goals>
+									<goal>jar-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>2.10.1</version>
+						<executions>
+							<execution>
+								<id>attach-javadocs</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<additionalJOptions>
+								<additionalJOption>-J-Xmx16m </additionalJOption>
+							</additionalJOptions>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.5</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>external.atlassian.jgitflow</groupId>
+						<artifactId>jgitflow-maven-plugin</artifactId>
+						<version>1.0-m4.3</version>
+						<configuration>
+							<enableSshAgent>false</enableSshAgent>
+							<autoVersionSubmodules>true</autoVersionSubmodules>
+							<pushFeatures>true</pushFeatures>
+							<pushReleases>true</pushReleases>
+							<pushHotfixes>true</pushHotfixes>
+							<noDeploy>false</noDeploy>
+							<alwaysUpdateOrigin>true</alwaysUpdateOrigin>
+							<flowInitContext>
+								<developBranchName>development</developBranchName>
+								<versionTagPrefix>rev-</versionTagPrefix>
+							</flowInitContext>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<version>1.6.5</version>
+						<extensions>true</extensions>
+						<configuration>
+							<serverId>ossrh</serverId>
+							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 	<dependencyManagement>
 		<dependencies>
@@ -399,21 +422,21 @@
 					</archive>
 				</configuration>
 			</plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.17</version>
-                <configuration>
-                    <forkCount>1</forkCount>
-                    <reuseForks>false</reuseForks>
-                    <runOrder>random</runOrder>
-                    <enableAssertions>true</enableAssertions>
-                    <argLine>-Xms16M -Xmx512M ${surefireArgLine}</argLine>
-                    <systemPropertyVariables>
-                        <tests.json.strict.validation.disabled>${tests.json.strict.validation.disabled}</tests.json.strict.validation.disabled>
-                    </systemPropertyVariables>
-                </configuration>
-            </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.17</version>
+				<configuration>
+					<forkCount>1</forkCount>
+					<reuseForks>false</reuseForks>
+					<runOrder>random</runOrder>
+					<enableAssertions>true</enableAssertions>
+					<argLine>-Xms16M -Xmx512M ${surefireArgLine}</argLine>
+					<systemPropertyVariables>
+						<tests.json.strict.validation.disabled>${tests.json.strict.validation.disabled}</tests.json.strict.validation.disabled>
+					</systemPropertyVariables>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
