IC-13 fixed Sonar issue, exception handling

--- a/inkstand-jcr-jackrabbit/pom.xml
+++ b/inkstand-jcr-jackrabbit/pom.xml
@@ -50,6 +50,11 @@
 			<artifactId>jcr</artifactId>
 		</dependency>
 		
+		<dependency>
+            <groupId>li.moskito</groupId>
+            <artifactId>inkstand-core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 		<!-- JCR stereotypes -->
 		<dependency>
 			<groupId>li.moskito</groupId>
